debugging for UX

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,18 +2,26 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --background: 0 0% 0%;
+  --card: 0 0% 12%;
+  --primary: 38 92% 50%;
+}
+
+body {
+  background-color: black;
+  color: white;
+}
+
 @layer base {
   :root {
-    --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
 
-    --card: 0 0% 100%;
     --card-foreground: 222.2 84% 4.9%;
  
     --popover: 0 0% 100%;
     --popover-foreground: 222.2 84% 4.9%;
  
-    --primary: 222.2 47.4% 11.2%;
     --primary-foreground: 210 40% 98%;
  
     --secondary: 210 40% 96.1%;
@@ -36,7 +44,6 @@
   }
  
   .dark {
-    --background: 222.2 84% 4.9%;
     --foreground: 210 40% 98%;
  
     --card: 222.2 84% 4.9%;
